# energy-bench

./: Makefile  README.md  __init__.py  __main__.py  environments.py  implementations.py  requirements.txt  scenario.py  trial.yml  utils.py
commands/: __init__.py  analyze.py  base.py  generate.py  measure.py  report.py  tune.py
energy_signal/: Cargo.toml  EnergySignal.java  energy_signal.h
energy_signal/src/: lib.rs  signals.rs
llms/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py
scenarios/clbg/c_gcc_15.1.0/: binary-trees-layman.yaml  binary-trees-static.yml  binary-trees.yml  fannkuch-redux-tweaked.yml  fannkuch-redux.yml  fasta.yml  k-nucleotide.yml  n-body.yml  pidigits.yml  regex-redux.yml  reverse-complement.yml  spectral-norm.yml
scenarios/clbg/cpp_gcc_15.1.0/: binary-trees.yml  fannkuch-redux-tweaked.yaml  fannkuch-redux.yml  fasta.yml  k-nucleotide.yml  n-body.yml  pidigits.yml  regex-redux.yml  reverse-complement.yml  spectral-norm.yml
scenarios/clbg/cs_dotnet_9.0.204/: binary-trees.yml  fannkuch-redux-tweaked.yml  fannkuch-redux.yml  fasta.yml  k-nucleotide.yml  n-body.yml  pidigits.yml  regex-redux.yml  reverse-complement.yml  spectral-norm.yml
scenarios/clbg/java_graalvm_24.0.1/: binary-trees.yml  fannkuch-redux.yml  fasta.yml  k-nucleotide.yml  n-body.yml  pidigits.yml  regex-redux.yml  reverse-complement.yml  spectral-norm.yml
scenarios/clbg/java_openjdk_24.0.1+9/: binary-trees.yml  fannkuch-redux-tweaked.yml  fannkuch-redux.yml  fasta.yml  k-nucleotide.yaml  (+5 more)
workloads/: __init__.py  base.py  browser.py  phoronix.py
(+115 files in other folders)
