[package]
name = "energy_signal"
version = "0.1.0"
edition = "2021"

[lib]
name = "energy_signal"
crate-type = ["cdylib", "staticlib"]

[dependencies]
nix = { version = "0.30.1", features = ["signal"] }
jni = "0.21"
once_cell = "1.21.3"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = "abort"
